# time

./: .gitignore  Cargo.toml  README.md  build.rs
.vercel/: project.json
resources/: README.md
src/: lunar.rs  main.rs
ui/: clock.slint  simple_menu.slint
