[package]
name = "beautiful-clock"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.12"
chrono = { version = "0.4", features = ["serde"] }
raw-window-handle = "0.5"
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Registry", "Win32_Security"] }
windows-core = "0.52"
i-slint-backend-winit = "1.12"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
tray-icon = "0.13.5"
tao = "0.28.0"
anyhow = "1.0.83"
rand = "0.8"
ico = "0.4"

[build-dependencies]
slint-build = "1.12"
winres = "0.1"
image = "0.24"
ico = "0.3"

[profile.release]
opt-level = "s"
strip = true
lto = true